--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "Node UserService.js"
+    "start": "Node Service.js"
   },
   "keywords": [],
   "author": "",
